corrected spelling in one of the articles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="article1">
                 <h3>Ok, clearly I'm just having way too much fun with CSS</h3>
                 <p>
-                This page was designed for fun as one of our first bootcamp assignments. I think it took be roughly 6 hours to get it done. And it was 6 hours of pure fun. (and little frustration, of course) 
+                This page was designed for fun as one of our first bootcamp assignments. I think it took me roughly 6 hours to get it done. And it was 6 hours of pure fun. (and little frustration, of course) 
                 </p>
             </div>
             <div class="article2">
